@@ -1,3 +1,3 @@
 #!/bin/bash
-PROJECT_ROOT=/home/vagrant/dev/group_03_project
-mvn -pl MatchingEngine -am clean package && java -jar MatchingEngine/target/MatchingEngine-1.0-SNAPSHOT-jar-with-dependencies.jar $(hostname -I | awk '{print $2}') 1
+# Suppress warning related to sun.misc.Unsafe and sun.nio.ch.SelectorImpl.selectedKeys
+mvn -pl MatchingEngine -am clean package && java --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED -jar MatchingEngine/target/MatchingEngine-1.0-SNAPSHOT-jar-with-dependencies.jar $(hostname -I | awk '{print $2}') 1
